--- a/VoiceCommandDatabase/templates/base.html
+++ b/VoiceCommandDatabase/templates/base.html
@@ -8,7 +8,7 @@
     <title>{% block title %} {% endblock title %} | VCDC</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     {% comment %} NAVBAR {% endcomment %}
