--- a/VoiceCommandDatabase/templates/partials/navbar.html
+++ b/VoiceCommandDatabase/templates/partials/navbar.html
@@ -1,8 +1,11 @@
 <nav class="navbar navbar-expand-lg shadow-sm" style="background-color: #555555; z-index: 1050;">
     <div class="container-fluid">
-        {% if user.is_authenticated %}
-            <a class="navbar-brand fw-bold text-white" href="/">ANASAYFA</a>
-        {% endif %}
+    {% load static %}
+    {% if user.is_authenticated %}
+        <a class="navbar-brand fw-bold text-white" href="/">
+            <img src="{% static 'images/favicon.png' %}" alt="Logo" style="height: 24px;">
+        </a>
+    {% endif %}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" style="color: white;"></span>
         </button>
