--- a/VoiceCommandDatabase/mainpage/templates/mainpage/show_voices.html
+++ b/VoiceCommandDatabase/mainpage/templates/mainpage/show_voices.html
@@ -164,6 +164,7 @@
         </select>
     </div>
     <a href="{% url 'download_voice_list' %}" class="btn btn-success" target="_blank" id="indirbtn">PDF İndir</a>
+    <a href="{% url 'download_voice_list_csv' %}" class="btn btn-success" target="_blank" id="indirbtn">CSV İndir</a>
 </div>
 
 <audio id="audio-player"></audio>
